Set java version to java 8, fixed thumbnail error, cleaned up code